add_definitions(-DEXAMPLE_CMAKE_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\")

#build a binary
macro(cylon_add_exe EXENAME)
    add_executable(${EXENAME} ${EXENAME}.cpp)
    target_link_libraries(${EXENAME} ${MPI_LIBRARIES})
    target_link_libraries(${EXENAME} cylon)
    target_link_libraries(${EXENAME} ${ARROW_LIB})
    target_link_libraries(${EXENAME} ${GLOG_LIBRARIES})
    install(TARGETS ${EXENAME} RUNTIME DESTINATION examples)
endmacro(cylon_add_exe)

include_directories(../cylon)

cylon_add_exe(union_example)
cylon_add_exe(select_example)
cylon_add_exe(join_example)
cylon_add_exe(project_example)
cylon_add_exe(subtract_example)
cylon_add_exe(intersect_example)
cylon_add_exe(task_test)
cylon_add_exe(ra_test_inmem_datagen_example)
cylon_add_exe(table_from_vectors_example)
cylon_add_exe(compute_example)
cylon_add_exe(groupby_benchmark_example)
cylon_add_exe(groupby_pipeline_example)
cylon_add_exe(groupby_example)
cylon_add_exe(partition_example)
cylon_add_exe(unique_example)
cylon_add_exe(unique_bench_example)
cylon_add_exe(indexing_example)
cylon_add_exe(sorting_example)
cylon_add_exe(multicolumn_sorting_example)
cylon_add_exe(multi_idx_join_example)

if (CYLON_PARQUET)
    cylon_add_exe(parquet_test)
    cylon_add_exe(parquet_from_csv_test)
    cylon_add_exe(parquet_union_example)
    cylon_add_exe(parquet_join_example)
endif (CYLON_PARQUET)

macro(cylon_add_exe2 DIR EXENAME)
    add_executable(${EXENAME} ${DIR}/${EXENAME}.cpp)
    target_link_libraries(${EXENAME} ${MPI_LIBRARIES})
    target_link_libraries(${EXENAME} cylon)
    target_link_libraries(${EXENAME} ${ARROW_LIB})
    target_link_libraries(${EXENAME} ${GLOG_LIBRARIES})
    install(TARGETS ${EXENAME} RUNTIME DESTINATION examples)
endmacro(cylon_add_exe2)

cylon_add_exe2(ops com_comm_test)
cylon_add_exe2(ops join_op_example)


